src/objects/Alert__c.object
<CustomObject>
    <fields>
        <fullName>Alert_Close_Date__c</fullName>
        <label>Alert Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alert_Numbers__c</fullName>
        <label>Alert Numbers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cycle_Time_Info__c</fullName>
        <formula>IF(ISNULL(Cycle_Time__c),NULL,IF(FLOOR(Cycle_Time__c) = 0, &quot;&quot;,TEXT(FLOOR(Cycle_Time__c))&amp; &quot; Days &quot;) &amp; TEXT(ROUND(MOD(Cycle_Time__c,1)*60,0)) &amp; &quot; Hours&quot;)</formula>
        <label>Cycle Time Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_Time__c</fullName>
        <formula>IF(TEXT(Status__c) = &apos;Close&apos;,IF(ISNULL(Alert_Close_Date__c),0,Alert_Close_Date__c -  CreatedDate),NULL)</formula>
        <label>Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notifications__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notifications</label>
        <referenceTo>Notifications__c</referenceTo>
        <relationshipName>Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Orders__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orders</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipName>Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_sent_Date__c</fullName>
        <description>This field will be updated by the date the email template will be sent based on alerts.</description>
        <label>Template sent Date</label>
        <type>DateTime</type>
    </fields>
    <label>Job Alert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Notifications__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>